--- a/core/src/main/cpp/CMakeLists.txt
+++ b/core/src/main/cpp/CMakeLists.txt
@@ -19,12 +19,20 @@ execute_process(
   COMMAND git submodule foreach git branch -r --contains ${COMMIT_HASH}
   WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} 
   OUTPUT_VARIABLE CURRENT_BRANCH
+  ERROR_QUIET
 )
 string(REPLACE "\n" ";" CURRENT_BRANCH "${CURRENT_BRANCH}")
-list(GET CURRENT_BRANCH 1 CURRENT_BRANCH)
-string (REGEX REPLACE "origin/" "" CURRENT_BRANCH ${CURRENT_BRANCH})
-string (REGEX REPLACE "[\n\t\r]" "" CURRENT_BRANCH ${CURRENT_BRANCH})
-#string(SUBSTRING ${CURRENT_BRANCH} 0 8 CURRENT_BRANCH)
+list(LENGTH CURRENT_BRANCH BRANCH_LIST_LEN)
+if(BRANCH_LIST_LEN GREATER 1)
+  list(GET CURRENT_BRANCH 1 CURRENT_BRANCH)
+  string(REGEX REPLACE "origin/" "" CURRENT_BRANCH "${CURRENT_BRANCH}")
+  string(REGEX REPLACE "[\n\t\r ]" "" CURRENT_BRANCH "${CURRENT_BRANCH}")
+else()
+  set(CURRENT_BRANCH "Alpha")
+endif()
+if("${CURRENT_BRANCH}" STREQUAL "")
+  set(CURRENT_BRANCH "Alpha")
+endif()
 message(STATUS "git current branch = ${CURRENT_BRANCH}")
 
 # 获取生成时间
