--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -7,6 +7,8 @@ on:
       - main
     paths-ignore:
       - 'README.md'
+    tags:
+      - 'v*'
 
 jobs:
   build:
@@ -51,12 +53,60 @@ jobs:
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
 
-      - name: Build with Gradle
+      - name: Setup Signing (from secrets)
+        if: ${{ secrets.KEYSTORE_BASE64 != '' }}
+        run: |
+          echo "${{ secrets.KEYSTORE_BASE64 }}" | base64 -d > release.keystore
+          cat > signing.properties << EOF
+          keystore.password=${{ secrets.KEYSTORE_PASSWORD }}
+          key.alias=${{ secrets.KEY_ALIAS }}
+          key.password=${{ secrets.KEY_PASSWORD }}
+          EOF
+
+      - name: Setup Signing (auto-generate for release)
+        if: ${{ secrets.KEYSTORE_BASE64 == '' && startsWith(github.ref, 'refs/tags/') }}
+        run: |
+          keytool -genkey -v -keystore release.keystore \
+            -alias clash-meta \
+            -keyalg RSA -keysize 2048 -validity 10000 \
+            -storepass clashmetaandroid \
+            -keypass clashmetaandroid \
+            -dname "CN=ClashMetaForAndroid, OU=Dev, O=CMFA, L=Beijing, ST=Beijing, C=CN"
+          cat > signing.properties << EOF
+          keystore.password=clashmetaandroid
+          key.alias=clash-meta
+          key.password=clashmetaandroid
+          EOF
+
+      - name: Build Release APK
+        if: startsWith(github.ref, 'refs/tags/')
+        run: ./gradlew assembleMetaRelease --stacktrace
+
+      - name: Build Debug APK
+        if: ${{ !startsWith(github.ref, 'refs/tags/') }}
         run: ./gradlew assembleMetaDebug --stacktrace
 
-      - name: Upload APK
+      - name: Upload Debug APK
+        if: ${{ !startsWith(github.ref, 'refs/tags/') }}
         uses: actions/upload-artifact@v4
         with:
           name: clash-meta-android-debug
           path: app/build/outputs/apk/meta/debug/*.apk
           retention-days: 30
+
+      - name: Get Version
+        if: startsWith(github.ref, 'refs/tags/')
+        id: get_version
+        run: echo "VERSION=${GITHUB_REF#refs/tags/}" >> $GITHUB_OUTPUT
+
+      - name: Create Release
+        if: startsWith(github.ref, 'refs/tags/')
+        uses: softprops/action-gh-release@v1
+        with:
+          name: ${{ steps.get_version.outputs.VERSION }}
+          draft: false
+          prerelease: false
+          files: |
+            app/build/outputs/apk/meta/release/*.apk
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
