--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -53,18 +53,8 @@ jobs:
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
 
-      - name: Setup Signing (from secrets)
-        if: ${{ secrets.KEYSTORE_BASE64 != '' }}
-        run: |
-          echo "${{ secrets.KEYSTORE_BASE64 }}" | base64 -d > release.keystore
-          cat > signing.properties << EOF
-          keystore.password=${{ secrets.KEYSTORE_PASSWORD }}
-          key.alias=${{ secrets.KEY_ALIAS }}
-          key.password=${{ secrets.KEY_PASSWORD }}
-          EOF
-
       - name: Setup Signing (auto-generate for release)
-        if: ${{ secrets.KEYSTORE_BASE64 == '' && startsWith(github.ref, 'refs/tags/') }}
+        if: startsWith(github.ref, 'refs/tags/')
         run: |
           keytool -genkey -v -keystore release.keystore \
             -alias clash-meta \
@@ -83,11 +73,11 @@ jobs:
         run: ./gradlew assembleMetaRelease --stacktrace
 
       - name: Build Debug APK
-        if: ${{ !startsWith(github.ref, 'refs/tags/') }}
+        if: "!startsWith(github.ref, 'refs/tags/')"
         run: ./gradlew assembleMetaDebug --stacktrace
 
       - name: Upload Debug APK
-        if: ${{ !startsWith(github.ref, 'refs/tags/') }}
+        if: "!startsWith(github.ref, 'refs/tags/')"
         uses: actions/upload-artifact@v4
         with:
           name: clash-meta-android-debug
