fix: support SECRET_CODE on Android 12+ and auto-restore hidden icon

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -201,8 +201,15 @@
 
         <receiver android:name=".DialerReceiver"
             android:exported="true">
+            <!-- 支持 Android 12 之前的版本 -->
             <intent-filter>
                 <action android:name="android.provider.Telephony.SECRET_CODE" />
+                <!-- 252746382 is the name of Clash Meta in T9 -->
+                <data android:scheme="android_secret_code" android:host="252746382" />
+            </intent-filter>
+            <!-- 支持 Android 12+ (API 31+) 的新 SECRET_CODE action -->
+            <intent-filter>
+                <action android:name="android.telephony.action.SECRET_CODE" />
                 <!-- 252746382 is the name of Clash Meta in T9 -->
                 <data android:scheme="android_secret_code" android:host="252746382" />
             </intent-filter>
