--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -78,6 +78,17 @@
                 <data android:scheme="clashmeta"/>
                 <data android:host="install-config"/>
             </intent-filter>
+            <!-- URL Scheme 恢复隐藏的应用图标 -->
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+
+                <data android:scheme="clash"/>
+                <data android:scheme="clashmeta"/>
+                <data android:host="restore-icon"/>
+            </intent-filter>
             <intent-filter>
                 <action android:name="com.github.metacubex.clash.meta.action.START_CLASH" />
                 <category android:name="android.intent.category.DEFAULT" />
