feat: 添加 Gist 备份功能
新增功能：
- 支持将 App 设置、订阅配置、代理选择状态备份到 GitHub Gist
- 支持从 Gist 恢复配置
- 使用 AES-256-GCM 加密备份数据
- 使用 EncryptedSharedPreferences 安全存储 GitHub Token
- 在设置页面添加 Gist 备份入口（与应用设置、网络设置并列）

新增文件：
- GistStore.kt: 安全凭据存储
- GistCrypto.kt: AES 加密工具
- GistApi.kt: GitHub API 客户端
- GistBackupManager.kt: 备份恢复管理器
- GistBackupData.kt: 数据模型
- GistBackupDesign.kt: UI 设计
- GistBackupActivity.kt: 备份界面

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -152,6 +152,11 @@
             android:configChanges="uiMode"
             android:exported="false"
             android:label="@string/app" />
+        <activity
+            android:name=".GistBackupActivity"
+            android:configChanges="uiMode"
+            android:exported="false"
+            android:label="@string/gist_backup" />
         <!-- 已移除: OverrideSettingsActivity -->
         <!-- 已移除: MetaFeatureSettingsActivity -->
         <activity
